# Eltex-Practice-Project

./: .gitignore  CMakeLists.txt  LICENSE  README.md
FileManager/: CMakeLists.txt
FileManager/src/: event.c  files.c  main.c  tui.c  tui.h
IPC-Chat/: CMakeLists.txt
Linux/char-device-driver/: chardev.c  chardev.h
Linux/netfilter/ping/: Makefile  ping.c
Linux/netfilter/port_filter/: Makefile  port_filter.c  port_filter.h
Linux/netfilter/proxy_dns/: Makefile  proxy_dns.c  proxy_dns.h
Linux/netlink/: a.out  netlnk.c  netlnk.h
Linux/proc-fs/: Makefile  proc_fs.c  proc_fs.h
Linux/shadow/: Makefile  kern_shadow.c  kern_shadow.h
Networking/Broadcast/: CMakeLists.txt  client.c  server.c
Networking/Multicast/: CMakeLists.txt  client.c  server.c
Networking/Socket/Broadcast/: CMakeLists.txt  client.c  server.c
src/: event.c  event.h  files.c  files.h  global.h  main.c  tui.c  tui.h
